--- a/flash_chat/pubspec.yaml
+++ b/flash_chat/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   firebase_auth: ^5.2.0
   cloud_firestore: ^5.3.0
   modal_progress_hud_nsn: ^0.5.1
+  flutter_bloc: ^8.1.6
+  auto_scroll: ^0.2.0
+  formz: ^0.7.0
 
 dev_dependencies:
   flutter_test:
