--- a/flash_chat/.vscode/settings.json
+++ b/flash_chat/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "java.compile.nullAnalysis.mode": "disabled",
-    "java.configuration.updateBuildConfiguration": "disabled"
+  "java.compile.nullAnalysis.mode": "disabled",
+  "java.configuration.updateBuildConfiguration": "disabled",
+  "cSpell.words": ["firestore"]
 }
