--- a/flash_chat/pubspec.yaml
+++ b/flash_chat/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   gradient_slide_to_act: ^0.0.2
   slidable_button: ^3.0.0+1
   image_picker: ^1.1.2
+  firebase_storage: ^12.2.0
+  form_validator: ^2.1.1
 
 dev_dependencies:
   flutter_test:
