--- a/flash_chat/pubspec.yaml
+++ b/flash_chat/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   image_picker: ^1.1.2
   firebase_storage: ^12.2.0
   form_validator: ^2.1.1
+  intl_phone_number_input: ^0.7.4
+  pin_code_fields: ^8.0.1
+  firebase_app_check: ^0.3.1+1
 
 dev_dependencies:
   flutter_test:
